# DEVCOR

./: README.md
APIDev/: Api.py  database.txt
gitdemo/: Second_Website.html  Website.html
pypipackage/: README.md  pyproject.toml
pypipackage/src/example_package_path_ne/: Api.py
